<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:focusable="true"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".ui.fragment.CompanyRegisterFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_name"/>

    <EditText
        android:layout_marginTop="3dp"
        android:id="@+id/edittext_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:textCursorDrawable="@drawable/edittext_cursor"
        android:hint=""/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/str_category"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="38dp">

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:focusable="false"
            android:hint="@string/str_select"
            android:dropDownWidth="match_parent"
            android:paddingEnd="20dp"
            android:layout_marginTop="3dp"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_txt_default"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/str_business_category"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="38dp">

        <Spinner
            android:id="@+id/spinner_subcategory"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:focusable="false"
            android:dropDownWidth="match_parent"
            android:hint="@string/str_select"
            android:paddingEnd="20dp"
            android:layout_marginTop="3dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_txt_default"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/str_business_type"/>


    <RelativeLayout
        android:id="@+id/layout_busines_type"
        android:layout_width="match_parent"
        android:layout_height="38dp">

        <TextView
            android:id="@+id/edittext_business_type"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:dropDownWidth="match_parent"
            android:hint="@string/str_select"
            android:gravity="center_vertical"
            android:paddingEnd="20dp"
            android:layout_marginTop="3dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_txt_default"/>

    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_email"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/edittext_email"
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:cursorVisible="true"
        android:maxLength="40"
        android:textCursorDrawable="@drawable/edittext_cursor"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_mobile"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/edittext_mobile"
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:maxLength="16"
        android:cursorVisible="true"
        android:textCursorDrawable="@drawable/edittext_cursor"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_password_sign_up"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_marginTop="3dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:cursorVisible="true"
        android:textCursorDrawable="@drawable/edittext_cursor"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_confirm_password"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/edittext_confirm_password"
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:cursorVisible="true"
        android:textCursorDrawable="@drawable/edittext_cursor"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/layout_term_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:gravity="top">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:theme="@style/inputColors"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_accept_term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_accept_term_policy"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/checkbox"
            android:paddingBottom="6dp"
            android:layout_gravity="top"
            android:includeFontPadding="false"
            android:layout_marginEnd="4dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_sign_up"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/ic_round_black_background_12"
        android:layout_marginTop="36dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:textColor="@color/color_white"
            android:text="@string/str_join_now"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:padding="4dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/color_black"
        android:text="@string/str_or_sign_in"/>

</LinearLayout>