<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginEnd="16dp">

        <LinearLayout
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:orientation="vertical"
            android:background="@drawable/ic_round_white_background_20">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/str_update_profile"
                    android:textColor="@color/color_black"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/color_black"/>

            </LinearLayout>

            <EditText
                android:id="@+id/edittext_email"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="24dp"
                android:textSize="14sp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:gravity="center_vertical"
                android:hint="@string/str_email" />

            <EditText
                android:id="@+id/edittext_mobile"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="20dp"
                android:textSize="14sp"
                android:maxLength="18"
                android:paddingStart="8dp"
                android:inputType="numberDecimal"
                android:paddingEnd="8dp"
                android:gravity="center_vertical"
                android:hint="@string/str_phone" />

            <Spinner
                android:id="@+id/spinner_country"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="20dp"
                android:textSize="12sp"
                android:background="@drawable/ic_edittext_background"
                android:gravity="center_vertical" />

            <Spinner
                android:id="@+id/spinner_city"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="20dp"
                android:textSize="12sp"
                android:background="@drawable/ic_edittext_background"
                android:gravity="center_vertical" />

            <EditText
                android:id="@+id/edittext_language"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="20dp"
                android:textSize="14sp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:gravity="center_vertical"
                android:hint="@string/str_language" />

            <EditText
                android:id="@+id/edittext_school"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="20dp"
                android:textSize="14sp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:gravity="center_vertical"
                android:hint="@string/str_school" />

            <EditText
                android:id="@+id/edittext_university"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="20dp"
                android:textSize="14sp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:gravity="center_vertical"
                android:hint="@string/str_university" />

            <EditText
                android:id="@+id/edittext_work"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="20dp"
                android:textSize="14sp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:gravity="center_vertical"
                android:hint="@string/str_work" />

            <TextView
                android:id="@+id/tv_upload"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAllCaps="false"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="@drawable/ic_round_black_background_8"
                android:text="@string/str_upload"
                android:textColor="@color/color_white"
                android:textSize="15sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"/>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>