<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_root"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:background="@drawable/ic_round_white_background_20">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/str_add_thread"
                android:textColor="@color/color_black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:layout_marginTop="2dp"
                android:background="@color/color_black"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#223269"
            android:textSize="12sp"
            style="@style/textFontLight"
            android:layout_marginTop="16dp"
            android:text="@string/str_subject"/>

        <EditText
            android:id="@+id/edittext_title"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:textSize="12sp"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_rounded_bubble_category"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:hint="@string/str_subject"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#223269"
            style="@style/textFontLight"
            android:textSize="12sp"
            android:layout_marginTop="12dp"
            android:text="@string/str_text"/>

        <EditText
            android:id="@+id/edittext_description"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            android:paddingTop="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:hint="@string/str_write_your_feed"
            android:background="@drawable/ic_rounded_bubble_category"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#223269"
            style="@style/textFontLight"
            android:textSize="12sp"
            android:layout_marginTop="12dp"
            android:text="@string/str_group"/>

        <RelativeLayout
            android:id="@+id/layout_select_file"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_rounded_bubble_category"
            android:layout_height="36dp">

            <Spinner
                android:id="@+id/spinner_group"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:hint="@string/str_select"
                android:textSize="14sp"
                android:paddingEnd="16dp"
                android:background="@null"
                android:dropDownWidth="match_parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_drop_down"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAllCaps="false"
            style="@style/textFontLight"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@drawable/ic_round_black_background_8"
            android:text="@string/str_add"
            android:textColor="@color/color_white"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"/>

    </LinearLayout>

</LinearLayout>
