<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:gravity="center_horizontal"
        android:background="@drawable/ic_round_white_background_20">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_email_sent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_email_link_sent"
            android:textSize="24sp"
            android:textColor="#8A8A8A"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#8A8A8A"
            android:textAlignment="center"
            android:layout_marginTop="12dp"
            android:text="@string/str_check_your_email"/>

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@drawable/ic_round_black_background_8"
            android:text="@string/str_continue"
            android:textColor="@color/color_white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"/>
    </LinearLayout>

</LinearLayout>
